2006-04-27  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in src/Makefile.am: Change PKG_MAJOR to
	VERSION_MAJOR to avoid a conflict with pkg-config macros.
	They will be used with cairo, pango, and gtk+ for the wxWidgets
	terminal.

2006-04-27  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/plot2d.c (get_data): Initialize further elements of df_data
	depending on plot style, so datafile module can parse absolute
	time/data for xlow etc.  Similar fix for handling 'set ydata time;
	plot "-" u 2'.

	* src/plot3d.c (eval_3dplots): Fix for 'set zdata time; plot "-" u
	2'.  Replicate realloc size fix from get_data (--> 2006-03-28)
	here.

2006-04-26  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* docs/gnuplot.doc (fit control environment): Fix mention of
	command 'set fit logfile'.

2006-04-25  James R. Van Zandt  <jrv@vanzandt.comcast.net>

	* term/cgm.trm (CGM_filled_polygon): Allow filled polygons with up
	to 8190 vertices (was only 50).  Also, allocate the
	polygon/polyline array from the heap, so it only takes space if
	the CGM terminal is used.

	* term/cgm.trm (CGM_set_color): access colorspec->value only
	for type=TC_FRAC when it is defined.
	
2006-04-25  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/win/wgnuplot.hpj (COMPRESS): New option, enables compression
	of the generated .hlp file.
	(LCID): New option, fixed the language of generated help files to
	English.  Hopefully this will avoid incompatibilities like the one
	observed with the first binary release of 4.0 for Win32.

2006-04-24  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/graphics.c (plot_image_or_update_axes) config/config.cyg
	config/config.mgw config/config.nt config/config.os2 configure.in:
	Removed all use of WITH_IMAGE_VERIFY_ALL_PIXEL_LOCATIONS and any
	code associated with verifying pixel locations in the grid.

2006-04-19  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_set_font): Do not write font change commands